Cisco Software Engineer- C, C++, Linux, Networking

--- a/projects.tex
+++ b/projects.tex
@@ -1,23 +1,23 @@
 \section{Projects}
 \resumeSubHeadingListStart
   \resumeProjectHeading
-    {\textbf{Secure SD-WAN Control Plane Engine} (\href{https://github.com/CodeWreckPro/Order-Matching-Engine}{Repo}) $|$ \emph{C/C++, UNIX, Multithreading}}{}
+    {\textbf{Low-Latency Networking Engine} (\href{https://github.com/CodeWreckPro/Order-Matching-Engine}{Repo}) $|$ \emph{C++, Linux, Multithreading}}{}
     \resumeItemListStart
-      \resumeItem{Implemented high-performance routing services in C++ using \textbf{lock-free data structures} and multithreading for concurrent packet processing; optimized for resource-constrained environments.}
-      \resumeItem{Designed resilient control plane logic with \textbf{retry/backoff} mechanisms for secure communication; containerized using Docker for scalable deployment across distributed systems.}
+      \resumeItem{Engineered a high-performance networking engine in \textbf{C++} using \textbf{lock-free data structures} and custom memory management; achieved sub-millisecond execution times.}
+      \resumeItem{Devised \textbf{multithreaded} architecture for concurrent order processing; optimized for resource-constrained environments and integrated resilient network I/O with hardware-adjacent retry policies.}
     \resumeItemListEnd
 
   \resumeProjectHeading
-    {\textbf{Network Security Audit Tool} (\href{https://codewreckpro.github.io/Echelons_Code_Analysis_Tool/}{Live} $|$ \href{https://github.com/CodeWreckPro/Echelons_Code_Analysis_Tool}{Repo}) $|$ \emph{AI, Python, Security Visualization}}{}
+    {\textbf{Secure Embedded Storage \& Firmware Utility} (\href{https://github.com/CodeWreckPro/AES_Encryption_and_Decryption_Script}{Repo}) $|$ \emph{C/C++, Secure Coding, AES}}{}
     \resumeItemListStart
-      \resumeItem{Developed an AI-powered platform to identify \textbf{vulnerabilities}, technical debt, and security risks in large-scale codebases; implemented semantic commit analysis to track security compliance.}
-      \resumeItem{Visualized complex system dependencies to guide refactoring and evaluation workflows; contributed to \textbf{architecture and design reviews} for secure software development life cycles (SDLC).}
+      \resumeItem{Built a secure storage module for embedded systems using \textbf{AES-256} encryption and block-level deduplication; applied \textbf{secure coding} principles to ensure data integrity for specialized hardware.}
+      \resumeItem{Crafted modular key management and refined byte-level I/O performance for high-throughput, resource-constrained industrial storage operations.}
     \resumeItemListEnd
 
   \resumeProjectHeading
-    {\textbf{IPsec Tunnel Encryption Utility} (\href{https://github.com/CodeWreckPro/AES_Encryption_and_Decryption_Script}{Repo}) $|$ \emph{Python, AES, Secure Coding}}{}
+    {\textbf{Industrial Code Analysis Tool} (\href{https://codewreckpro.github.io/Echelons_Code_Analysis_Tool/}{Live} $|$ \href{https://github.com/CodeWreckPro/Echelons_Code_Analysis_Tool}{Repo}) $|$ \emph{AI, ML, 3D Visualization}}{}
     \resumeItemListStart
-      \resumeItem{Implemented \textbf{AES/CBC} encryption with PKCS\#7 padding for secure data transmission; designed modular key management and robust error handling to prevent decryption failures.}
-      \resumeItem{Applied \textbf{secure coding standards} to build a CLI utility for cryptographic operations; optimized byte-level performance for real-time encryption and decryption tasks.}
+      \resumeItem{Created an AI‑powered platform that predicts risks, detects technical debt, and visualizes dependencies in large-scale networking codebases; implemented ML‑based hotspot prediction.}
+      \resumeItem{Developed pipelines for repository analysis; contributed to \textbf{architecture/design reviews}; delivered dashboards to guide refactoring and evaluation of IIoT software components.}
     \resumeItemListEnd
 \resumeSubHeadingListEnd
