--- a/skills.tex
+++ b/skills.tex
@@ -1,10 +1,10 @@
 \section{Skills}
 \begin{itemize}[leftmargin=0.15in, label={}, itemsep=1pt, topsep=1pt, parsep=0pt, partopsep=0pt]
     \small{\item{
-     \textbf{Languages}{: C, C++, Golang, Python, Bash, SQL, C\#, Java} \\
-     \textbf{Networking \& Security}{: VPN, SD-WAN (Catalyst), IPsec, IKEv2, RSA, Post-Quantum Cryptography (PQC), QKD, SSL/TLS} \\
-     \textbf{Core Systems}{: UNIX, IOS, Multithreading, Multiprocessing, Distributed Systems, Microservices, High-Availability} \\
-     \textbf{Optimization}{: Async I/O, Lock-free Data Structures, Memory Management, Performance Profiling, Real-time Systems} \\
-     \textbf{Tools \& Practices}{: Secure Coding, Agile (Scrum/Kanban), Git, CI/CD, Docker, Kubernetes, AWS/Azure, AI-Assisted Dev}
+     \textbf{Languages}{: C, C++, Python, Golang, Bash, Shell, SQL, C\#, Java} \\
+     \textbf{IIoT \& Networking}{: Control/Data Plane, BSP, Device Drivers, Kernel Modules, L2/L3 Protocols, RTOS, PCIe, I2C, SPI} \\
+     \textbf{Core Systems}{: Industrial Networking, Switching, Routing, Linux/Unix, Distributed Systems, High-Availability} \\
+     \textbf{Analysis \& Dev}{: Performance Optimization, Real-time Systems, Traffic Analyzers (IXIA/Sniffer), Debugging, Secure Coding} \\
+     \textbf{Tools \& Practices}{: Git, CI/CD, Agile/Scrum, Docker, Kubernetes, AWS/Azure, AI-Assisted Development}
     }}
 \end{itemize}
