--- a/summary.tex
+++ b/summary.tex
@@ -1,2 +1,2 @@
 \section{Summary}
-SD-WAN Security Software Engineer specializing in \textbf{VPN}, \textbf{IPsec}, and \textbf{IKEv2} protocol development for high-performance networking solutions. Proficient in \textbf{C} and \textbf{C++} within \textbf{UNIX/IOS} multithreading and multiprocessing environments. Experienced in designing, building, and debugging \textbf{large-scale distributed systems} with a focus on \textbf{Post-Quantum Cryptography (PQC)} and \textbf{Quantum-Safe} encryption to protect against HNDL attacks. Skilled in \textbf{RSA certificate} authentication, secure data transmission, and optimizing \textbf{SD-WAN} architectures for multicloud and SaaS. Strong problem-solving background in identifying and resolving complex vulnerabilities in critical infrastructure.
+Software Engineer with over 4 years of experience in \textbf{C/C++} and \textbf{Linux} for Industrial IoT (\textbf{IIoT}) platforms. Expert in developing \textbf{Control Plane} and \textbf{Data Plane} software, including \textbf{BSPs}, \textbf{device drivers}, and \textbf{L2/L3 networking protocols}. Proficient in real-time optimization (\textbf{RTOS}), secure coding, and debugging complex hardware-software interfaces (PCIe, I2C, SPI). Proven track record of translating complex requirements into scalable, high-performance solutions within a collaborative, fast-paced environment.
