2008379 Cisco Software Engineer

--- a/experience.tex
+++ b/experience.tex
@@ -4,13 +4,13 @@
     {Siemens Healthineers}{Bangalore, India}
     {Software Engineer 1}{July 2023 -- Present}
     \resumeItemListStart
-      \resumeItem{\textbf{Developed high-performance distributed services} in \textbf{C++} and \textbf{Go}; optimized concurrency and memory usage to reduce service latency by \textbf{25\%}.}
-      \resumeItem{\textbf{Orchestrated resilience patterns} like circuit breakers and retries, ensuring consistent system availability and data integrity under high load.}
-      \resumeItem{\textbf{Enhanced system observability} with distributed tracing and built internal CLI tools to automate diagnostics, improving engineering velocity.}
-      \resumeItem{\textbf{Engineered next-gen Control/Data Plane software} in \textbf{C/C++} for IIoT platforms; optimized \textbf{BSPs} and kernel modules to reduce latency by \textbf{25\%}.}
-      \resumeItem{\textbf{Implemented L2/L3 networking protocols} and device drivers for specialized hardware; ensured 99.99\% reliability and secure boot for industrial systems.}
-      \resumeItem{\textbf{Integrated object storage} (\textbf{AWS S3}/\textbf{Azure Blob}) with multipart uploads and checksum validation; increased sustained ingest throughput by \textbf{35\%} and reduced transfer errors by \textbf{50\%}.}
-      \resumeItem{\textbf{Implemented idempotent ingestion handlers} with \textbf{retries/backoff} and deduplication keys to ensure reliable processing under failures; lowered duplicate processing by \textbf{90\%} and improved recovery robustness.}
+      \resumeItem{\textbf{Built high-performance microservices} in \textbf{C++}/\textbf{Go} interoperating with \textbf{Java} services; optimized concurrency and memory to lower latency by \textbf{25\%}.}
+      \resumeItem{\textbf{Implemented resilience patterns} like circuit breakers and retries, ensuring consistent system availability and data integrity under high load.}
+      \resumeItem{\textbf{Enhanced multi-tenant data path} with \textbf{MySQL} tuning and \textbf{Redis} caching; increased throughput by \textbf{40\%} for large datasets.}
+      \resumeItem{\textbf{Applied secure coding principles} and \textbf{Design Thinking} to simplify \textbf{Linux systems programming} and security protocols, ensuring user privacy and data integrity.}
+      \resumeItem{\textbf{Leveraged AI tools like GitHub Copilot} to accelerate development, conduct code reviews, and generate automated test cases for complex security features.}
+      \resumeItem{\textbf{Integrated PKI and SSL/TLS certificates} for secure communication between distributed services, identifying and fixing certificate provisioning issues to improve security posture.}
+      \resumeItem{\textbf{Optimized system-level I/O} and networking workflows in \textbf{UNIX} environments, reducing mean time to resolution (\textbf{MTTR}) for production defects via structured debugging.}
     \resumeItemListEnd
 
   \resumeSubheading
