--- a/projects.tex
+++ b/projects.tex
@@ -1,23 +1,23 @@
 \section{Projects}
 \resumeSubHeadingListStart
   \resumeProjectHeading
-    {\textbf{Low-Latency Networking Engine} (\href{https://github.com/CodeWreckPro/Order-Matching-Engine}{Repo}) $|$ \emph{C++, Linux, Multithreading}}{}
+    {\textbf{High-Performance Systems \& Security Engine} (\href{https://github.com/CodeWreckPro/Order-Matching-Engine}{Github}) $|$ \emph{C++, Linux, Multithreading}}{}
     \resumeItemListStart
-      \resumeItem{Engineered a high-performance networking engine in \textbf{C++} using \textbf{lock-free data structures} and custom memory management; achieved sub-millisecond execution times.}
-      \resumeItem{Devised \textbf{multithreaded} architecture for concurrent order processing; optimized for resource-constrained environments and integrated resilient network I/O with hardware-adjacent retry policies.}
+      \resumeItem{Engineered a low-latency systems engine in \textbf{C++} using \textbf{lock-free data structures} and custom memory management; achieved sub-millisecond execution times in \textbf{Linux environments}.}
+      \resumeItem{Designed a \textbf{multithreaded} architecture for concurrent processing; optimized for scale and reliability, incorporating secure network I/O with resilient retry policies.}
     \resumeItemListEnd
 
   \resumeProjectHeading
-    {\textbf{Secure Embedded Storage \& Firmware Utility} (\href{https://github.com/CodeWreckPro/AES_Encryption_and_Decryption_Script}{Repo}) $|$ \emph{C/C++, Secure Coding, AES}}{}
+    {\textbf{Secure Distributed Data \& Encryption Utility} (\href{https://github.com/CodeWreckPro/AES_Encryption_and_Decryption_Script}{Github}) $|$ \emph{C++, Secure Coding, AES}}{}
     \resumeItemListStart
-      \resumeItem{Built a secure storage module for embedded systems using \textbf{AES-256} encryption and block-level deduplication; applied \textbf{secure coding} principles to ensure data integrity for specialized hardware.}
-      \resumeItem{Crafted modular key management and refined byte-level I/O performance for high-throughput, resource-constrained industrial storage operations.}
+      \resumeItem{Built a secure distributed storage utility with \textbf{AES-256} encryption and block-level deduplication; applied \textbf{secure coding principles} and simplified data transmission logic.}
+      \resumeItem{Integrated \textbf{PKI/Certs} for secure authentication; optimized byte-level performance and error handling to protect against data corruption and unauthorized access.}
     \resumeItemListEnd
 
   \resumeProjectHeading
-    {\textbf{Industrial Code Analysis Tool} (\href{https://codewreckpro.github.io/Echelons_Code_Analysis_Tool/}{Live} $|$ \href{https://github.com/CodeWreckPro/Echelons_Code_Analysis_Tool}{Repo}) $|$ \emph{AI, ML, 3D Visualization}}{}
+    {\textbf{AI-Powered Code \& Security Analysis Tool} (\href{https://codewreckpro.github.io/Echelons_Code_Analysis_Tool/}{Live} $|$ \href{https://github.com/CodeWreckPro/Echelons_Code_Analysis_Tool}{Github}) $|$ \emph{AI, ML, Python}}{}
     \resumeItemListStart
-      \resumeItem{Created an AI‑powered platform that predicts risks, detects technical debt, and visualizes dependencies in large-scale networking codebases; implemented ML‑based hotspot prediction.}
-      \resumeItem{Developed pipelines for repository analysis; contributed to \textbf{architecture/design reviews}; delivered dashboards to guide refactoring and evaluation of IIoT software components.}
+      \resumeItem{Created an AI-powered platform to predict technical debt and security risks; used \textbf{AI tools like GitHub Copilot} to accelerate feature development and unit test generation.}
+      \resumeItem{Developed pipelines for repository analysis; contributed to \textbf{architecture/design reviews} and delivered visualizations for code quality and security compliance.}
     \resumeItemListEnd
 \resumeSubHeadingListEnd
