--- a/summary.tex
+++ b/summary.tex
@@ -1,2 +1,2 @@
 \section{Summary}
-Software Engineer with over 4 years of experience in \textbf{C/C++} and \textbf{Linux} for Industrial IoT (\textbf{IIoT}) platforms. Expert in developing \textbf{Control Plane} and \textbf{Data Plane} software, including \textbf{BSPs}, \textbf{device drivers}, and \textbf{L2/L3 networking protocols}. Proficient in real-time optimization (\textbf{RTOS}), secure coding, and debugging complex hardware-software interfaces (PCIe, I2C, SPI). Proven track record of translating complex requirements into scalable, high-performance solutions within a collaborative, fast-paced environment.
+Software Engineer with over 4 years of experience specializing in \textbf{C/C++ systems programming}, \textbf{Network Security}, and \textbf{Distributed Infrastructure}. Expert in building high-performance, secure applications consistent with \textbf{Design Thinking Principles}, focusing on simplification and user privacy. Proficient in \textbf{Linux systems programming} and security protocols including \textbf{TLS}, \textbf{IPsec}, and \textbf{PKI}. Skilled in using AI tools like \textbf{GitHub Copilot} to accelerate development, debugging, and test generation. Strong background in \textbf{Data Structures and Algorithms}, delivering scalable, test-driven solutions in \textbf{Agile} environments.
