--- a/skills.tex
+++ b/skills.tex
@@ -1,10 +1,10 @@
 \section{Skills}
 \begin{itemize}[leftmargin=0.15in, label={}, itemsep=1pt, topsep=1pt, parsep=0pt, partopsep=0pt]
     \small{\item{
-     \textbf{Languages}{: C, C++, Python, Golang, Bash, Shell, SQL, C\#, Java} \\
-     \textbf{IIoT \& Networking}{: Control/Data Plane, BSP, Device Drivers, Kernel Modules, L2/L3 Protocols, RTOS, PCIe, I2C, SPI} \\
-     \textbf{Core Systems}{: Industrial Networking, Switching, Routing, Linux/Unix, Distributed Systems, High-Availability} \\
-     \textbf{Analysis \& Dev}{: Performance Optimization, Real-time Systems, Traffic Analyzers (IXIA/Sniffer), Debugging, Secure Coding} \\
-     \textbf{Tools \& Practices}{: Git, CI/CD, Agile/Scrum, Docker, Kubernetes, AWS/Azure, AI-Assisted Development}
+     \textbf{Languages}{: C, C++, Golang, Python, SQL, Bash, Shell, C\#, Java} \\
+     \textbf{Security \& Networking}{: TLS, IPsec, MACSec, PKI/Certs, AAA, Network Security, SSL/TLS, Distributed Systems} \\
+     \textbf{Core Systems}{: Linux/Unix Systems Programming, Multithreading, Multiprocessing, High-Availability, RTOS} \\
+     \textbf{Optimization}{: Performance Profiling, Lock-free Data Structures, Async I/O, Memory Management, Debugging} \\
+     \textbf{Tools \& Practices}{: GitHub Copilot, Secure Coding, Agile/Scrum, Git, CI/CD, Docker, Kubernetes, AWS/Azure}
     }}
 \end{itemize}
