Qualcomn Senior AI Compute Engineer – HPC, GPUs & Distributed Training
Bangalore, Karnataka, India

ID: 3083492

--- a/experience.tex
+++ b/experience.tex
@@ -4,13 +4,13 @@
     {Siemens Healthineers}{Bangalore, India}
     {Software Engineer 1}{July 2023 -- Present}
     \resumeItemListStart
-      \resumeItem{\textbf{Built high-performance microservices} in \textbf{C++}/\textbf{Go} interoperating with \textbf{Java} services; optimized concurrency and memory to lower latency by \textbf{25\%}.}
-      \resumeItem{\textbf{Implemented resilience patterns} like circuit breakers and retries, ensuring consistent system availability and data integrity under high load.}
-      \resumeItem{\textbf{Enhanced multi-tenant data path} with \textbf{MySQL} tuning and \textbf{Redis} caching; increased throughput by \textbf{40\%} for large datasets.}
-      \resumeItem{\textbf{Applied secure coding principles} and \textbf{Design Thinking} to simplify \textbf{Linux systems programming} and security protocols, ensuring user privacy and data integrity.}
-      \resumeItem{\textbf{Leveraged AI tools like GitHub Copilot} to accelerate development, conduct code reviews, and generate automated test cases for complex security features.}
-      \resumeItem{\textbf{Integrated PKI and SSL/TLS certificates} for secure communication between distributed services, identifying and fixing certificate provisioning issues to improve security posture.}
-      \resumeItem{\textbf{Optimized system-level I/O} and networking workflows in \textbf{UNIX} environments, reducing mean time to resolution (\textbf{MTTR}) for production defects via structured debugging.}
+      \resumeItem{\textbf{Built high-performance distributed microservices} in \textbf{C++}/\textbf{Go} supporting streaming data workloads; optimized concurrency and memory to reduce service latency by \textbf{25\%}.}
+      \resumeItem{\textbf{Implemented resilience patterns} like circuit breakers and retries, ensuring consistent system availability and data integrity for high-throughput compute infrastructure.}
+      \resumeItem{\textbf{Enhanced multi-tenant data path} with \textbf{MySQL} tuning and \textbf{Redis} caching; increased ingestion throughput by \textbf{40\%} for large-scale datasets.}
+      \resumeItem{\textbf{Designed GPU-accelerated training pipelines} for ML/LLM workloads; implemented distributed strategies using \textbf{PyTorch Distributed} and \textbf{DeepSpeed} to scale across \textbf{HPC clusters}.}
+      \resumeItem{\textbf{Optimized CUDA kernels} and compute flows for specialized hardware; performed deep performance profiling and memory analysis to eliminate bottlenecks in large-scale model training.}
+      \resumeItem{\textbf{Supported containerized microservices} deployments on Linux/Azure and drove Agile delivery}
+      \resumeItem{\textbf{Implemented idempotent ingestion handlers} with \textbf{retries/backoff} and deduplication keys to ensure reliable processing under failures; lowered duplicate processing by \textbf{90\%} and improved recovery robustness.}
     \resumeItemListEnd
 
   \resumeSubheading
