--- a/projects.tex
+++ b/projects.tex
@@ -1,23 +1,23 @@
 \section{Projects}
 \resumeSubHeadingListStart
   \resumeProjectHeading
-    {\textbf{High-Performance Systems \& Security Engine} (\href{https://github.com/CodeWreckPro/Order-Matching-Engine}{Github}) $|$ \emph{C++, Linux, Multithreading}}{}
+    {\textbf{Distributed AI Compute Engine} (\href{https://github.com/CodeWreckPro/Order-Matching-Engine}{Repo}) $|$ \emph{C++, CUDA, PyTorch}}{}
     \resumeItemListStart
-      \resumeItem{Engineered a low-latency systems engine in \textbf{C++} using \textbf{lock-free data structures} and custom memory management; achieved sub-millisecond execution times in \textbf{Linux environments}.}
-      \resumeItem{Designed a \textbf{multithreaded} architecture for concurrent processing; optimized for scale and reliability, incorporating secure network I/O with resilient retry policies.}
+      \resumeItem{Engineered a low-latency parallel compute engine in \textbf{C++} using \textbf{lock-free data structures} and custom memory management to minimize overhead in distributed training tasks.}
+      \resumeItem{Designed a \textbf{multithreaded} architecture for concurrent data processing; optimized for multi-node clusters and integrated resilient communication protocols for scalable model training.}
     \resumeItemListEnd
 
   \resumeProjectHeading
-    {\textbf{Secure Distributed Data \& Encryption Utility} (\href{https://github.com/CodeWreckPro/AES_Encryption_and_Decryption_Script}{Github}) $|$ \emph{C++, Secure Coding, AES}}{}
+    {\textbf{Secure Distributed Training Utility} (\href{https://github.com/CodeWreckPro/AES_Encryption_and_Decryption_Script}{Repo}) $|$ \emph{C++, Python, DeepSpeed}}{}
     \resumeItemListStart
-      \resumeItem{Built a secure distributed storage utility with \textbf{AES-256} encryption and block-level deduplication; applied \textbf{secure coding principles} and simplified data transmission logic.}
-      \resumeItem{Integrated \textbf{PKI/Certs} for secure authentication; optimized byte-level performance and error handling to protect against data corruption and unauthorized access.}
+      \resumeItem{Built a secure utility for handling large-scale ML datasets with \textbf{AES-256} encryption; implemented block-level deduplication to optimize storage and data movement across HPC nodes.}
+      \resumeItem{Crafted modular compute flows and robust error handling for data integrity; refined \textbf{CUDA kernel} performance for high-throughput training operations.}
     \resumeItemListEnd
 
   \resumeProjectHeading
-    {\textbf{AI-Powered Code \& Security Analysis Tool} (\href{https://codewreckpro.github.io/Echelons_Code_Analysis_Tool/}{Live} $|$ \href{https://github.com/CodeWreckPro/Echelons_Code_Analysis_Tool}{Github}) $|$ \emph{AI, ML, Python}}{}
+    {\textbf{AI Compute Performance Analysis Tool} (\href{https://codewreckpro.github.io/Echelons_Code_Analysis_Tool/}{Live} $|$ \href{https://github.com/CodeWreckPro/Echelons_Code_Analysis_Tool}{Repo}) $|$ \emph{AI, ML, 3D Visualization}}{}
     \resumeItemListStart
-      \resumeItem{Created an AI-powered platform to predict technical debt and security risks; used \textbf{AI tools like GitHub Copilot} to accelerate feature development and unit test generation.}
-      \resumeItem{Developed pipelines for repository analysis; contributed to \textbf{architecture/design reviews} and delivered visualizations for code quality and security compliance.}
+      \resumeItem{Created an AI‑powered platform that predicts compute risks, detects bottlenecks, and visualizes \textbf{GPU memory} dependencies; implemented ML‑based performance hotspot prediction.}
+      \resumeItem{Developed pipelines for repository analysis; contributed to \textbf{architecture/design reviews}; delivered dashboards to guide optimization of large‑scale training jobs.}
     \resumeItemListEnd
 \resumeSubHeadingListEnd
