--- a/skills.tex
+++ b/skills.tex
@@ -1,10 +1,10 @@
 \section{Skills}
 \begin{itemize}[leftmargin=0.15in, label={}, itemsep=1pt, topsep=1pt, parsep=0pt, partopsep=0pt]
     \small{\item{
-     \textbf{Languages}{: C, C++, Golang, Python, SQL, Bash, Shell, C\#, Java} \\
-     \textbf{Security \& Networking}{: TLS, IPsec, MACSec, PKI/Certs, AAA, Network Security, SSL/TLS, Distributed Systems} \\
-     \textbf{Core Systems}{: Linux/Unix Systems Programming, Multithreading, Multiprocessing, High-Availability, RTOS} \\
-     \textbf{Optimization}{: Performance Profiling, Lock-free Data Structures, Async I/O, Memory Management, Debugging} \\
-     \textbf{Tools \& Practices}{: GitHub Copilot, Secure Coding, Agile/Scrum, Git, CI/CD, Docker, Kubernetes, AWS/Azure}
+     \textbf{Languages}{: C++, Python, CUDA, Golang, SQL, Bash, Shell, C\#, Java} \\
+     \textbf{AI \& Compute}{: PyTorch Distributed, DeepSpeed, HPC Clusters, Multi-GPU Systems, Parallel Processing, GenAI/LLM} \\
+     \textbf{Core Systems}{: Computer Architecture, Distributed Training Frameworks, Memory Management, RTOS, Linux Kernel} \\
+     \textbf{Optimization}{: CUDA Kernels, Performance Profiling (VTune, GDB), Lock-free Structures, High-Availability} \\
+     \textbf{Tools \& Frameworks}{: PyTorch, TensorFlow, scikit-learn, Git, CI/CD, Docker, Kubernetes, AWS/Azure}
     }}
 \end{itemize}
