--- a/summary.tex
+++ b/summary.tex
@@ -1,2 +1,2 @@
 \section{Summary}
-Software Engineer with over 4 years of experience specializing in \textbf{C/C++ systems programming}, \textbf{Network Security}, and \textbf{Distributed Infrastructure}. Expert in building high-performance, secure applications consistent with \textbf{Design Thinking Principles}, focusing on simplification and user privacy. Proficient in \textbf{Linux systems programming} and security protocols including \textbf{TLS}, \textbf{IPsec}, and \textbf{PKI}. Skilled in using AI tools like \textbf{GitHub Copilot} to accelerate development, debugging, and test generation. Strong background in \textbf{Data Structures and Algorithms}, delivering scalable, test-driven solutions in \textbf{Agile} environments.
+Senior AI Compute Engineer specializing in \textbf{HPC}, \textbf{GPU acceleration}, and \textbf{distributed training} frameworks for ML and GenAI workloads. Expert in designing and optimizing high-performance compute infrastructure using \textbf{PyTorch Distributed} and \textbf{DeepSpeed}. Proficient in \textbf{C++}, \textbf{Python}, and \textbf{CUDA} for parallel computing and \textbf{LLM pipeline} optimization. Strong background in \textbf{computer architecture}, memory management, and compute flow troubleshooting. Proven ability to scale training across \textbf{multi-node HPC clusters}, eliminate performance bottlenecks, and integrate scalable compute solutions in collaboration with platform teams.
