Qualcomn XR Software Engineer

--- a/projects.tex
+++ b/projects.tex
@@ -1,23 +1,23 @@
 \section{Projects}
 \resumeSubHeadingListStart
   \resumeProjectHeading
-    {\textbf{Distributed AI Compute Engine} (\href{https://github.com/CodeWreckPro/Order-Matching-Engine}{Repo}) $|$ \emph{C++, CUDA, PyTorch}}{}
+    {\textbf{High-Frequency Order Matching Engine} (\href{https://github.com/CodeWreckPro/Order-Matching-Engine}{Repo}) $|$ \emph{C++, Docker, AWS}}{}
     \resumeItemListStart
-      \resumeItem{Engineered a low-latency parallel compute engine in \textbf{C++} using \textbf{lock-free data structures} and custom memory management to minimize overhead in distributed training tasks.}
-      \resumeItem{Designed a \textbf{multithreaded} architecture for concurrent data processing; optimized for multi-node clusters and integrated resilient communication protocols for scalable model training.}
+      \resumeItem{Implemented high-performance routing and control services in \textbf{Modern C++} using \textbf{lock-free data structures} and multithreading for concurrent packet processing; optimized for resource-constrained AR/VR devices.}
+      \resumeItem{Designed resilient system logic with \textbf{retry/backoff} mechanisms for secure communication; integrated with hardware-adjacent interfaces to ensure high-velocity data flows in XR platforms.}
     \resumeItemListEnd
 
   \resumeProjectHeading
-    {\textbf{Secure Distributed Training Utility} (\href{https://github.com/CodeWreckPro/AES_Encryption_and_Decryption_Script}{Repo}) $|$ \emph{C++, Python, DeepSpeed}}{}
+    {\textbf{Secure Distributed Storage Utility} (\href{https://github.com/CodeWreckPro/AES_Encryption_and_Decryption_Script}{Repo}) $|$ \emph{C++, Python, AES}}{}
     \resumeItemListStart
-      \resumeItem{Built a secure utility for handling large-scale ML datasets with \textbf{AES-256} encryption; implemented block-level deduplication to optimize storage and data movement across HPC nodes.}
-      \resumeItem{Crafted modular compute flows and robust error handling for data integrity; refined \textbf{CUDA kernel} performance for high-throughput training operations.}
+      \resumeItem{Developed an AI-powered platform to identify \textbf{vulnerabilities}, technical debt, and security risks in large-scale codebases; implemented semantic commit analysis for secure XR software development.}
+      \resumeItem{Visualized complex \textbf{rendering pipeline} dependencies to guide refactoring and evaluation workflows; contributed to architecture and design reviews for secure XR SDLC.}
     \resumeItemListEnd
 
   \resumeProjectHeading
-    {\textbf{AI Compute Performance Analysis Tool} (\href{https://codewreckpro.github.io/Echelons_Code_Analysis_Tool/}{Live} $|$ \href{https://github.com/CodeWreckPro/Echelons_Code_Analysis_Tool}{Repo}) $|$ \emph{AI, ML, 3D Visualization}}{}
+    {\textbf{EchoLens – Code Analysis Tool} (\href{https://codewreckpro.github.io/Echelons_Code_Analysis_Tool/}{Live} $|$ \href{https://github.com/CodeWreckPro/Echelons_Code_Analysis_Tool}{Repo}) $|$ \emph{AI, ML, 3D Visualization}}{}
     \resumeItemListStart
-      \resumeItem{Created an AI‑powered platform that predicts compute risks, detects bottlenecks, and visualizes \textbf{GPU memory} dependencies; implemented ML‑based performance hotspot prediction.}
-      \resumeItem{Developed pipelines for repository analysis; contributed to \textbf{architecture/design reviews}; delivered dashboards to guide optimization of large‑scale training jobs.}
+      \resumeItem{Implemented \textbf{AES/CBC} encryption with PKCS\#7 padding for secure data transmission; designed modular key management and robust error handling to prevent decryption failures.}
+      \resumeItem{Applied \textbf{secure coding standards} to build a CLI utility for cryptographic operations; optimized byte-level performance for real-time encryption and decryption tasks.}
     \resumeItemListEnd
 \resumeSubHeadingListEnd
