--- a/skills.tex
+++ b/skills.tex
@@ -1,10 +1,10 @@
 \section{Skills}
 \begin{itemize}[leftmargin=0.15in, label={}, itemsep=1pt, topsep=1pt, parsep=0pt, partopsep=0pt]
     \small{\item{
-     \textbf{Languages}{: C++, Python, CUDA, Golang, SQL, Bash, Shell, C\#, Java} \\
-     \textbf{AI \& Compute}{: PyTorch Distributed, DeepSpeed, HPC Clusters, Multi-GPU Systems, Parallel Processing, GenAI/LLM} \\
-     \textbf{Core Systems}{: Computer Architecture, Distributed Training Frameworks, Memory Management, RTOS, Linux Kernel} \\
-     \textbf{Optimization}{: CUDA Kernels, Performance Profiling (VTune, GDB), Lock-free Structures, High-Availability} \\
-     \textbf{Tools \& Frameworks}{: PyTorch, TensorFlow, scikit-learn, Git, CI/CD, Docker, Kubernetes, AWS/Azure}
+     \textbf{Languages}{: Modern C++ (11-20), C, Python, Golang, SQL, Bash, Shell, C\#, Java} \\
+     \textbf{XR \& Computer Vision}{: AR/VR/MR, Graphics Pipeline, CV Pipelines, Camera Pipelines, HW/SW Partitioning} \\
+     \textbf{Core Systems}{: Android, Linux, RTOS, Multi-core/Heterogeneous Programming (CPU/GPU/DSP/Tensor)} \\
+     \textbf{Architecture}{: Architectural Trade-offs, Power/Performance Analysis, System-on-a-Chip (SoC), Microservices} \\
+     \textbf{Tools \& Frameworks}{: OpenCV, Vulkan, OpenGL, Git, CI/CD, Docker, Kubernetes, AWS/Azure, AI-Assisted Dev}
     }}
 \end{itemize}
