--- a/summary.tex
+++ b/summary.tex
@@ -1,2 +1,2 @@
 \section{Summary}
-Senior AI Compute Engineer specializing in \textbf{HPC}, \textbf{GPU acceleration}, and \textbf{distributed training} frameworks for ML and GenAI workloads. Expert in designing and optimizing high-performance compute infrastructure using \textbf{PyTorch Distributed} and \textbf{DeepSpeed}. Proficient in \textbf{C++}, \textbf{Python}, and \textbf{CUDA} for parallel computing and \textbf{LLM pipeline} optimization. Strong background in \textbf{computer architecture}, memory management, and compute flow troubleshooting. Proven ability to scale training across \textbf{multi-node HPC clusters}, eliminate performance bottlenecks, and integrate scalable compute solutions in collaboration with platform teams.
+XR Software Engineer with deep expertise in \textbf{Modern C++ (11-20)} and \textbf{Computer Vision} for next-generation \textbf{AR/VR/MR} platforms. Specializes in deploying state-of-the-art CV algorithms on \textbf{heterogeneous mobile architectures} (CPUs, GPUs, DSPs). Expert in \textbf{graphics pipelines}, HW/SW partitioning, and performance optimization for resource-constrained embedded systems. Proven track record of translating complex XR requirements into scalable, high-design-quality production code. Strong systems background in \textbf{Android/Linux} and \textbf{Python}, with a focus on power/performance trade-offs and reliable, idiomatic software development.
