--- a/experience.tex
+++ b/experience.tex
@@ -4,13 +4,13 @@
     {Siemens Healthineers}{Bangalore, India}
     {Software Engineer 1}{July 2023 -- Present}
     \resumeItemListStart
-      \resumeItem{\textbf{Built high-performance distributed microservices} in \textbf{C++}/\textbf{Go} supporting streaming data workloads; optimized concurrency and memory to reduce service latency by \textbf{25\%}.}
-      \resumeItem{\textbf{Implemented resilience patterns} like circuit breakers and retries, ensuring consistent system availability and data integrity for high-throughput compute infrastructure.}
-      \resumeItem{\textbf{Enhanced multi-tenant data path} with \textbf{MySQL} tuning and \textbf{Redis} caching; increased ingestion throughput by \textbf{40\%} for large-scale datasets.}
-      \resumeItem{\textbf{Designed GPU-accelerated training pipelines} for ML/LLM workloads; implemented distributed strategies using \textbf{PyTorch Distributed} and \textbf{DeepSpeed} to scale across \textbf{HPC clusters}.}
-      \resumeItem{\textbf{Optimized CUDA kernels} and compute flows for specialized hardware; performed deep performance profiling and memory analysis to eliminate bottlenecks in large-scale model training.}
-      \resumeItem{\textbf{Supported containerized microservices} deployments on Linux/Azure and drove Agile delivery}
-      \resumeItem{\textbf{Implemented idempotent ingestion handlers} with \textbf{retries/backoff} and deduplication keys to ensure reliable processing under failures; lowered duplicate processing by \textbf{90\%} and improved recovery robustness.}
+      \resumeItem{\textbf{Developed high-performance distributed microservices} in \textbf{Modern C++} and \textbf{Go}; optimized concurrency and memory usage to reduce end‑to‑end latency by \textbf{25\%}.}
+      \resumeItem{\textbf{Implemented resilience patterns} like circuit breakers and retries, ensuring consistent system availability and data integrity under high load.}
+      \resumeItem{\textbf{Enhanced 3D visualization pipelines} enabling clinicians to sculpt and manipulate volumetric objects in real‑time; optimized visibility and validation feedback across MPR and VRT layouts.}
+      \resumeItem{\textbf{Deployed state-of-the-art CV algorithms} for automated lesion planning and segmentation; translated complex requirements into high‑design‑quality production code with \textbf{Modern C++ (17/20)}.}
+      \resumeItem{\textbf{Optimized XR-adjacent workloads} on \textbf{heterogeneous mobile architectures} (CPUs, GPUs); conducted power/performance analysis and architectural trade-offs to meet resource constraints.}
+      \resumeItem{\textbf{Integrated computer vision pipelines} for real-time updates of volume and measurement data; ensured DICOM-compliant storage and accurate save/load behavior for 3D segmentation objects.}
+      \resumeItem{\textbf{Oversee code reviews and issue triage} to ensure high quality and velocity; mentored junior engineers on structured debugging and performance profiling in an \textbf{Agile/SAFe} environment.}
     \resumeItemListEnd
 
   \resumeSubheading
